css/index.css
/* ... */
@media screen and (max-width: 768px) {
    #hero h1 {
        margin-top: 60px;
    }
}
#hero p {
    color: #FFF;
    margin-right: 50px;
    text-align: left;
    margin-bottom: 45px;
}
@media screen and (max-width: 768px) {
    #hero p {
        margin-left: 0;
    }
}
@media screen and (max-width: 480px) {
    #hero h1 {
        margin-top: 65px !important;
        font-size: 2em !important;
        max-width: 400px !important;
    }
}
/* =============================
* PARTNERS SECTION
* ============================== */

#partners {
    color: #FFF;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOo2sFQDwAElAGyy5g1dAAAAABJRU5ErkJggg==), url("assets/2016_2.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
#partners h2 {
    color: #FFF;
    margin-top: 0px;
    padding-top: 40px;
    padding-bottom: 20px;
}
#partners .partners-gallery {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
}
#partners .partners-gallery .sponsor {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding: 15px;
    max-height: 100px;
    margin-bottom: 25px;
    opacity: 0.85;
    max-width: 200px;
}
#partners .partners-gallery .sponsor:hover {
    opacity: 1;
}
#partners .partner-desc a {
    color: #FFF;
}
/* =============================
* PROJECTS SECTION
* ============================== */

#projects {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}
#projects h2 {
    margin-top: 0px;
    padding-top: 40px;
    padding-bottom: 20px;
    text-align: left;
}
#project .project:not(:last-child) {
    padding-bottom: 5px;
    border-bottom: 1px solid;
}
#projects .project:nth-child(odd), #projects .project:nth-child(odd) h3 {
    text-align: right;
}
#projects .project:nth-child(odd) .project-info {
    flex-direction: row-reverse;
}
#projects .project-partners {
    margin: 5px;
}
#projects .partner {
    max-height: 30px;
    margin: 5px;
    opacity: 0.85;
    filter: invert(100%);
}
#projects .partner:hover {
    opacity: 1;
}
/* =============================
* VIDEO SECTION
* ============================== */

#video {
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: #FFF;
}
#video .videowrapper {
    position: relative;
    padding-bottom: 53.55%;
    /* 16:9 */
    
    padding-top: 25px;
    height: 0;
}
#video .player .video-wrapper {
    background: #FFF !important;
}
#video iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
/* =============================
* LOCATION SECTION
* ============================== */

#location {
    color: #FFF;
    padding-bottom: 45px;
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mOo2sFQDwAElAGyy5g1dAAAAABJRU5ErkJggg==), url("assets/2016_3.jpg");
    background-size: cover;
    min-height: 600px;
}
@media screen and (max-width: 480px) {
    #location {
        min-height: 500px;
    }
}
#location h2 {
    margin: 0;
    padding-top: 40px;
    padding-bottom: 15px;
}
#location .tagline {
    text-align: center;
    margin-bottom: 25px;
    margin-top: 0;
}
#location .map {
    max-width: 550px;
    margin-left: auto;
    margin-right: auto;
}
#location .map img {
    width: 100%;
}
#location .cities {
    top: -30px;
    max-width: 700px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
#location .cities .date,
#location .cities .city,
#location .cities .place {
    line-height: 0.7em;
}
#location .cities .date {
    text-transform: uppercase;
    font-size: 1.1em;
    padding-bottom: 0;
}
#location .cities .city {
    font-size: 1.7em;
    font-weight: 600;
    margin-bottom: 0;
}
#location .cities .city a {
    color: #00a5e0;
    text-decoration: underline;
}
#location .cities .city a:hover {
    text-decoration: underline;
}
#location .cities .place {
    font-size: 1em;
    font-weight: 400;
}
/* =============================
* PREVIOUS EDITIONS SECTION
* ============================== */

#prev-edition {
    display: block;
    color: #FFF;
    text-align: center;
    background-color: #2D2D2D;
}
#prev-edition .tagline {
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 25px;
}
#prev-edition .prev-logos {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: space-around;
    justify-content: space-around;
}
#prev-edition .prev-logos a {
    margin: 25px 20px;
}
#prev-edition .prev-logos a img {
    width: 110px;
}
#prev-edition .prev-logos a:last-of-type {
    margin-bottom: 35px;
}
/* =============================
* STUDENTS SECTION
* ============================== */

.students {
    padding-bottom: 25px;
}
.students h2 {
    margin-top: 40px;
    margin-bottom: 30px;
}
#studentsparticipate {
    color: #2D2D2D;
    background-position: center;
    padding-bottom: 35px;
}
#studentsparticipate h2 {
    color: #2D2D2D;
    padding-top: 40px;
    padding-bottom: 25px;
    margin-top: 0px;
    margin-bottom: 0px;
}
#studentsparticipate .skill-gallery {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: space-between;
    justify-content: space-between;
    list-style-type: none;
    padding-left: 0;
}
#studentsparticipate .skill-gallery li {
    width: 33%;
}
@media screen and (max-width: 768px) {
    #studentsparticipate .skill-gallery li {
        width: 50%;
    }
}
/* ... */

